--- a/bootstrap-select-1.13.14/composer.json
+++ b/bootstrap-select-1.13.14/composer.json
@@ -29,5 +29,8 @@
   "suggest": {
     "components/jquery": "1.9.1 - 3",
     "twbs/bootstrap": ">=3.0.0"
+  },
+  "require": {
+    "ext-pdo": "*"
   }
 }
